--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,6 +21,7 @@
   <!-- Google Material Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
   <!-- <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" /> -->
+   <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"> -->
 
   <!-- Tailwind compiled (output.css) -->
   <link rel="stylesheet" href="/css/output.css">
